@@ -23,8 +23,30 @@
 Action class to check (fsck) target filesystem coherency.
 """
 
+import time
+import logging
+
 from Shine.Lustre.Actions.Action import Action, FSAction, Result, ErrorResult
 from Shine.Lustre.Component import TARGET_ERROR
+
+class FsckProgress(Result):
+    """
+    Result message sent with 'progress' event, to provide fsck command
+    progression.
+    """
+
+    # Number of passes in a e2fsck run.
+    _NB_PASSES = 5
+
+    def __init__(self, passid, current, total):
+        Result.__init__(self)
+        self.pass_id = int(passid)
+        self.pass_progress = float(current) / float(total)
+
+    @property
+    def progress(self):
+        """Current fsck command progression value, between 1 and 100."""
+        return ((self.pass_id - 1 + self.pass_progress) / self._NB_PASSES) * 100
 
 class Fsck(FSAction):
     """
@@ -35,19 +57,51 @@ class Fsck(FSAction):
 
     def __init__(self, target, **kwargs):
         FSAction.__init__(self, target)
+
+        # e2fsck send its progression on stderr
+        self.stderr = True
+
+        # Logging
+        self.logger = logging.getLogger(__name__)
+
+        # To track message rate
+        self._last_progress = 0
+
         self.addopts = kwargs.get('addopts')
 
     def _prepare_cmd(self):
         """
         Create the command line to run 'e2fsck'.
         """
-        command = ["e2fsck", '-y', self.comp.dev]
+        command = ["e2fsck", '-f -y -C2', self.comp.dev]
 
         # Process additional options
         if self.addopts:
             command.append(self.addopts)
 
         return command
+
+    def launch(self):
+        FSAction.launch(self)
+        self.logger.info("%-16s %s" % (self.comp.label, "Starting fsck"))
+
+    def ev_read(self, worker):
+        self.logger.info("%-16s %s" % (self.comp.label, worker.current_msg))
+
+    def ev_error(self, worker):
+        FSAction.ev_error(self, worker)
+        try:
+            line = worker.current_errmsg
+            passid, current, total, dummy = line.split(' ', 3)
+
+            result = FsckProgress(passid, current, total)
+            # Limit message rate to one message per second max.
+            if result.progress == 100 or self._last_progress + 1 < time.time():
+                self._last_progress = time.time()
+                self.comp._action_progress(self.NAME, result=result)
+
+        except ValueError:
+            pass
 
     def ev_close(self, worker):
         """
