@@ -154,13 +154,13 @@ class ActionsTest(unittest.TestCase):
         """test command line fsck"""
         tgt = self.fs.new_target(self.srv1, 'mgt', 0, '/dev/root')
         action = Fsck(tgt)
-        self.check_cmd(action, 'e2fsck -y /dev/root')
+        self.check_cmd(action, 'e2fsck -f -y -C2 /dev/root')
 
     def test_fsck_addopts(self):
         """test command line fsck (addl options)"""
         tgt = self.fs.new_target(self.srv1, 'mgt', 0, '/dev/root')
-        action = Fsck(tgt, addopts='-f')
-        self.check_cmd(action, 'e2fsck -y /dev/root -f')
+        action = Fsck(tgt, addopts='-v')
+        self.check_cmd(action, 'e2fsck -f -y -C2 /dev/root -v')
 
     # XXX: All _check_status() calls should be replaced by a real call to the
     # method dedicated action for the Target.
