@@ -1,3 +1,7 @@
+2012-02-10 Aurelien Degremont  <aurelien.degremont@cea.fr>
+	* Add fsck completion progress tracking and fsck is always run in 
+	  -f mode (ticket #107).
+
 2012-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
 	* Fix incorrect device size when using a symlink (ticket #119).
 	* Display action duration in verbose mode (ticket #120).
